--- a/src/components/EntryForm/EntryForm.module.scss
+++ b/src/components/EntryForm/EntryForm.module.scss
@@ -23,19 +23,16 @@ form.form {
   border: 1px $babyPowder solid;
 
   h1.title {
-    color: $babyPowder;
     margin-bottom: 3vh;
-    font-size: 3vw;
-    font-weight: 500;
     text-align: center;
+    @include fontType(3w, $babyPowder, 500);
 
-    @media screen and (width <= 1124px) {
-      font-size: 4.7vh;
-      font-weight: 700;
+    @include compact {
+      @include fontType(4.7vh, null, 700);
     }
   }
 
-  @media screen and (width <= 1124px) {
+  @include compact {
     width: 90%;
     padding: 1em;
   }
@@ -50,13 +47,12 @@ div.confirmPasswordContainer {
     margin-top: 0.4em;
     margin-bottom: 0;
     margin-left: 10%;
-    color: $oldRose;
-    font-size: 1vw;
     transition: 0.2s;
+    @include fontType(1vw, $oldRose);
 
-    @media screen and (width <= 1124px) {
-      font-size: 2.2vh;
+    @include compact {
       margin-left: 5%;
+      @include fontType(2.2vh);
     }
   }
 }
@@ -75,9 +71,6 @@ button.submit {
   height: 2em;
   outline: none;
   cursor: pointer;
-  font-size: 1.5vw;
-  font-weight: 600;
-  color: $babyPowder;
   border-radius: 5px;
   border: 1px solid transparent;
   background-color: $jungleGreen;
@@ -85,22 +78,21 @@ button.submit {
     border-color 0.2s,
     color 0.2s,
     scale 0.2s;
+  @include fontType(1.5vw, $babyPowder, 600);
 
-  @media (hover: hover) and (pointer: fine) {
-    &:hover {
-      color: $mintCream;
-      border-color: $zomp;
-    }
+  @include hover {
+    border-color: $zomp;
+    @include fontType(null, $mintCream);
   }
 
   &:active {
     scale: 0.97;
   }
 
-  @media screen and (width <= 1124px) {
+  @include compact {
     width: 90%;
     height: 2.5em;
-    font-size: 3vh;
+    @include fontType(3vh);
   }
 }
 
@@ -122,30 +114,27 @@ div.additionalContent {
 
   button.redirectLink {
     width: fit-content;
-    font-size: 1vw;
     cursor: pointer;
     padding: 0 0 1px;
     border: none;
-    color: $babyPowder;
     border-bottom: 1px solid transparent;
     background-color: transparent;
     transition:
       border-bottom-color 0.2s,
       color 0.2s;
+    @include fontType(1vw, $babyPowder);
 
-    @media (hover: hover) and (pointer: fine) {
-      &:hover {
-        border-bottom-color: $babyPowder;
-      }
+    @include hover {
+      border-bottom-color: $babyPowder;
     }
 
     &:active {
-      color: $jungleGreen;
       border-bottom-color: $jungleGreen;
+      @include fontType(null, $jungleGreen);
     }
 
-    @media screen and (width <= 1124px) {
-      font-size: 2.2vh;
+    @include compact {
+      @include fontType(2.2vh);
     }
   }
 }
@@ -159,19 +148,18 @@ label.isAdmin {
 
   p.isAdminTitle {
     margin: 0;
-    font-size: 1vw;
-    color: $babyPowder;
     text-align: left;
+    @include fontType(1vw, $babyPowder);
 
-    @media screen and (width <= 1124px) {
-      font-size: 2.2vh;
+    @include compact {
+      @include fontType(2.2vh);
     }
   }
 
   div.customCheckbox {
     position: relative;
     display: flex;
-    align-items: start;
+    align-items: flex-start;
     justify-content: center;
     width: 1.2em;
     height: 1.2em;
@@ -191,7 +179,7 @@ label.isAdmin {
       transition: opacity 0.2s;
     }
 
-    @media screen and (width <= 1124px) {
+    @include compact {
       width: 2.2vh;
       height: 2.2vh;
     }
@@ -205,7 +193,7 @@ label.isAdmin {
     }
   }
 
-  @media screen and (width <= 1124px) {
+  @include compact {
     width: 90%;
   }
 }
