--- a/src/components/NotFoundPage/NotFoundPage.module.scss
+++ b/src/components/NotFoundPage/NotFoundPage.module.scss
@@ -9,31 +9,29 @@ div.root {
 
 div.errorContainer {
   h1.title {
-    font-size: 3em;
     margin-bottom: 1.5em;
     text-align: center;
+    @include fontType(3em);
 
-    @media screen and (width < 1124px) {
-      font-size: 5vh;
+    @include compact {
       margin-bottom: 10vh;
+      @include fontType(5vh);
     }
   }
 
   a.goBack {
     cursor: pointer;
     text-decoration: none;
-    font-size: 2em;
-    font-weight: bold;
-    color: $babyPowder;
     background: $charcoal;
     border: 2px $babyPowder solid;
     padding-inline: 1em;
     padding-block: 0.5em;
     border-radius: 10px;
+    @include fontType(2em, $babyPowder, bold);
     @include colorButton($skyBlue);
 
-    @media screen and (width < 1124px) {
-      font-size: 4vh;
+    @include compact {
+      @include fontType(4vh);
     }
   }
 }
