--- a/src/components/TestForm/TestForm.module.scss
+++ b/src/components/TestForm/TestForm.module.scss
@@ -8,21 +8,21 @@ form.root {
 
   h1.formTitle {
     text-align: center;
-    font-size: 2.3em;
     margin-top: 0;
     margin-bottom: 0.5em;
+    @include fontType(2.3em);
 
-    @media screen and (width < 600px) {
+    @include narrow {
       display: none;
     }
   }
 
-  @media screen and (width < 1000px) {
+  @include standard {
     width: 90vw;
     padding-inline: 5vw;
   }
 
-  @media screen and (width < 600px) {
+  @include narrow {
     grid-template-rows: 1fr 5fr 1fr;
   }
 }
