--- a/src/components/TestForm/components/TestFormInfoEdit/TestFormInfoEdit.module.scss
+++ b/src/components/TestForm/components/TestFormInfoEdit/TestFormInfoEdit.module.scss
@@ -4,7 +4,7 @@ div.editContainer {
   align-items: center;
   justify-content: space-between;
 
-  @media screen and (width < 850px) {
+  @include miniature {
     flex-direction: column;
     gap: 1em;
     height: auto;
@@ -31,7 +31,7 @@ div.contentContainer {
   h2.testNameTitle {
     text-align: center;
     margin: 0;
-    font-size: 1.8em;
+    @include fontType(1.8em);
   }
 
   input.testNameInput,
@@ -43,11 +43,11 @@ div.contentContainer {
     width: 100%;
 
     &::placeholder {
-      color: rgba($babyPowder, 0.7);
+      @include fontType(null, rgba($babyPowder, 0.7));
     }
   }
 
-  @media screen and (width < 850px) {
+  @include miniature {
     gap: 1em;
     width: 100%;
   }
@@ -74,15 +74,15 @@ div.chooseQuestionContainer {
     background-position-x: calc(100% - 0.2em);
 
     option.questionTypeOption:not([value='']) {
-      color: $babyPowder;
+      @include fontType(null, $babyPowder);
     }
 
     &:has(option.questionTypeOption[value='']:checked),
     option.questionTypeOption[value=''] {
-      color: rgba($babyPowder, 0.7);
+      @include fontType(null, rgba($babyPowder, 0.7));
     }
 
-    @media screen and (width < 850px) {
+    @include miniature {
       width: 100%;
     }
   }
@@ -94,9 +94,8 @@ div.chooseQuestionContainer {
     cursor: pointer;
     border-radius: 5px;
     border: 2px $babyPowder solid;
-    color: $babyPowder;
-    font-size: 1.8em;
     background: $charcoal;
+    @include fontType(1.8em, $babyPowder);
     @include colorButton($zomp);
   }
 }
