--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,10 +1,9 @@
 body {
   font-family: Roboto, sans-serif;
-  font-weight: 400;
-  background-color: $gunmetal;
-  color: $babyPowder;
+  background-color: $gunMetal;
   overflow: hidden hidden;
   margin: 0;
+  @include fontType(null, $babyPowder, 400);
 
   ::-webkit-scrollbar {
     width: 8px;
@@ -21,9 +20,9 @@ body {
 button,
 input {
   font-family: Roboto, sans-serif;
-  color: $gunmetal;
+  @include fontType(null, $gunMetal);
 }
 
 div.dragStart {
-  background: rgba($gunmetal, 0.6);
+  background: rgba($gunMetal, 0.6);
 }
