--- a/src/components/common/ModalWindow/ModalWindow.module.scss
+++ b/src/components/common/ModalWindow/ModalWindow.module.scss
@@ -1,16 +1,18 @@
 aside.root {
   position: absolute;
-  display: grid;
-  place-items: center;
   z-index: 10;
   top: 0;
   left: 0;
+  display: grid;
   width: 100%;
   height: 100%;
+  place-items: center;
 }
 
 .invisibleContent {
   height: fit-content;
+  align-items: center;
+  gap: 4em;
 }
 
 .background {
@@ -24,19 +26,19 @@ aside.root {
 
 .componentFrom {
   position: relative;
-  display: inline-flex;
-  flex-direction: column;
-  justify-content: space-between;
-  gap: 1em;
   z-index: 10;
+  display: inline-flex;
   width: 45%;
   height: fit-content;
   max-height: 70%;
-  padding: 2.5%;
   box-sizing: border-box;
-  background: $charcoal;
-  border-radius: 10px;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 2.5%;
   border: 2px $babyPowder solid;
+  border-radius: 10px;
+  background: $charcoal;
+  gap: 1em;
 
   @include spacious {
     width: 70%;
@@ -50,45 +52,41 @@ aside.root {
   }
 }
 
-.invisibleContent {
-  height: fit-content;
-  gap: 4em;
-  align-items: center;
-}
-
 .formHeader {
-  width: 100%;
   display: inline-flex;
-  justify-content: space-between;
+  width: 100%;
   align-items: center;
+  justify-content: space-between;
 
   h1.title {
-    text-align: center;
     width: 80%;
-    margin-block: 0;
     margin-left: 10%;
+    margin-block: 0;
+    text-align: center;
+
     @include fontType(2em);
   }
 
   button.closeButton {
-    align-self: flex-start;
     width: 34px;
     height: 34px;
-    outline: none;
-    cursor: pointer;
-    background: transparent;
-    border-radius: 5px;
+    align-self: flex-start;
     border: 2px $babyPowder solid;
+    border-radius: 5px;
+    background: transparent;
+    cursor: pointer;
+    outline: none;
     transition:
       border-color 0.2s,
       scale 0.2s;
+
     @include cross(1.3em, 3px);
 
     @include hover {
       border-color: $oldRose;
 
-      &:after,
-      &:before {
+      &::after,
+      &::before {
         background: $oldRose;
       }
     }
