--- a/src/components/pages/TestForm/components/QuestionForm/CheckboxModalAnswer/CheckboxModalAnswer.module.scss
+++ b/src/components/pages/TestForm/components/QuestionForm/CheckboxModalAnswer/CheckboxModalAnswer.module.scss
@@ -1,13 +1,13 @@
 .answer {
   position: relative;
-  width: 98%;
   display: inline-flex;
-  justify-content: space-between;
+  width: 98%;
   box-sizing: border-box;
-  padding-inline: 1em;
-  padding-block: 0.5em;
-  border-radius: 5px;
+  justify-content: space-between;
   border: 2px $babyPowder solid;
+  border-radius: 5px;
+  padding-block: 0.5em;
+  padding-inline: 1em;
 
   label.answerLabel {
     position: relative;
@@ -15,17 +15,19 @@
   }
 
   input.answerTitleInput {
-    background: transparent;
-    outline: none;
+    padding: 0;
     border: none;
     border-bottom: 1px $babyPowder solid;
-    padding: 0;
+    background: transparent;
+    outline: none;
+
     @include fontType(1.2em, $babyPowder);
   }
 
   p.answerTitle {
     margin: 0;
     cursor: pointer;
+
     @include fontType(1.2em, $babyPowder);
   }
 
@@ -39,24 +41,25 @@
 
   input.answerCheckbox,
   input.answerRadio {
-    opacity: 0;
     margin-right: 1em;
+    opacity: 0;
 
-    &:checked + .customCheckbox:after,
-    &:checked + .customRadio:after {
+    &:checked + .customCheckbox::after,
+    &:checked + .customRadio::after {
       opacity: 1;
     }
   }
 
   button.answerDeleteButton {
     @include cross(1.3em, 2px);
-    cursor: pointer;
-    border-radius: 5px;
+
     box-sizing: border-box;
-    padding-inline: 0.6em;
-    padding-block: 0.1em;
     border: none;
+    border-radius: 5px;
     background: transparent;
+    cursor: pointer;
+    padding-block: 0.1em;
+    padding-inline: 0.6em;
     transition: background-color 0.2s;
   }
 }
