Refactor media mixins
Изменены имена миксинов, отвечающих за медиа запросы

--- a/src/components/common/ErrorContainer/ErrorContainer.module.scss
+++ b/src/components/common/ErrorContainer/ErrorContainer.module.scss
@@ -11,12 +11,12 @@
   gap: 0.5em;
   margin-inline: 20%;
 
-  @include miniature {
+  @include bigTablet {
     width: 80%;
     margin-inline: 10%;
   }
 
-  @include narrow {
+  @include tablet {
     width: 90%;
     margin-inline: 5%;
   }
