--- a/src/components/common/ModalWindow/ModalWindow.module.scss
+++ b/src/components/common/ModalWindow/ModalWindow.module.scss
@@ -40,13 +40,13 @@ aside.root {
   background: $charcoal;
   gap: 1em;
 
-  @include spacious {
+  @include mediumDesktop {
     width: 70%;
     max-height: 75%;
     padding: 5%;
   }
 
-  @include miniature {
+  @include bigTablet {
     width: 80%;
     max-height: 85%;
   }
