--- a/src/components/pages/Home/Home.module.scss
+++ b/src/components/pages/Home/Home.module.scss
@@ -30,12 +30,12 @@
     }
   }
 
-  @include wide {
+  @include bigDesktop {
     width: 80%;
     padding-inline: 10%;
   }
 
-  @include miniature {
+  @include bigTablet {
     width: 90%;
     height: 90vh;
     margin-block: 5vh;
@@ -72,7 +72,7 @@ section.loadingContainer {
   align-items: center;
   justify-content: center;
 
-  @include miniature {
+  @include bigTablet {
     height: 65vh;
   }
 }
