--- a/src/components/pages/NotFoundPage/NotFoundPage.module.scss
+++ b/src/components/pages/NotFoundPage/NotFoundPage.module.scss
@@ -14,7 +14,7 @@
 
     @include fontType(3em);
 
-    @include compact {
+    @include mediumDesktop {
       margin-bottom: 10vh;
 
       @include fontType(5vh);
@@ -33,7 +33,7 @@
     @include fontType(2em, $babyPowder, bold);
     @include colorButton($skyBlue);
 
-    @include compact {
+    @include mediumDesktop {
       @include fontType(4vh);
     }
   }
