--- a/src/components/pages/TestForm/components/TestFormInfoEdit/TestFormInfoEdit.module.scss
+++ b/src/components/pages/TestForm/components/TestFormInfoEdit/TestFormInfoEdit.module.scss
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: space-between;
 
-  @include miniature {
+  @include bigTablet {
     height: auto;
     flex-direction: column;
     gap: 1em;
@@ -48,7 +48,7 @@
     }
   }
 
-  @include miniature {
+  @include bigTablet {
     width: 100%;
     gap: 1em;
   }
@@ -83,7 +83,7 @@
       @include fontType(null, rgba($babyPowder, 0.7));
     }
 
-    @include miniature {
+    @include bigTablet {
       width: 100%;
     }
   }
