--- a/src/components/pages/Home/Home.module.scss
+++ b/src/components/pages/Home/Home.module.scss
@@ -6,7 +6,7 @@
   margin-block: 10vh;
   padding-inline: 15%;
 
-  button.addButton {
+  a.addButton {
     position: relative;
     display: flex;
     width: 100%;
@@ -17,6 +17,7 @@
     border-radius: 5px;
     background: $charcoal;
     cursor: pointer;
+    text-decoration: none;
     transition:
       color 0.2s,
       border-color 0.2s;
